Bug 1472733 - Improve IntRect overflow handling when calculating layer invalidation area and visible region r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D4627